--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="ru">
   <head>
     <meta charset="utf-8">
@@ -9,7 +10,7 @@
  <!-- подключаем bootstrap -->
         <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="{% static "css/style.css" %}" type="text/css" />
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <!-- Latest compiled and minified JavaScript -->
@@ -23,7 +24,7 @@
     <![endif]-->
   </head>
   <body>
-	<nav class="navbar navbar-inverse" role="navigation">
+	<nav class="navbar navbar-inverse">
 	  <div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
@@ -33,7 +34,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href={% url 'home' %}>Магазин ЯРКОГО света</a>
+		  <a class="navbar-brand" href={% url 'home' %} >Магазин ЯРКОГО света</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
