--- a/templates/lustra_list.html
+++ b/templates/lustra_list.html
@@ -11,7 +11,7 @@
           <div class="col-lg-3">
             <div class="thumbnail">
               <h3><a href="{{ lustr.pk }}">{{ lustr.product_title|truncatechars:20 }}</a></h3>
-              <img src="http://lustry.pythonanywhere.com/{{ lustr.product_image }}" alt="{{ lustr.product_title }}">
+              <img src="http://127.0.0.1:8000/{{ lustr.product_image }}" alt="{{ lustr.product_title }}">
               <div class="caption">
                     <div class="row">
                         <div class="col-lg-12">
