--- a/templates/lustra_detail.html
+++ b/templates/lustra_detail.html
@@ -12,7 +12,7 @@
 
             <div class="col-lg-4">
         	    <div class="well">
-            	    <img src="http://lustry.pythonanywhere.com/{{ product.product_image }}" alt="{{ product.product_title }}" width="300">
+            	    <img src="http://127.0.0.1:8000/{{ product.product_image }}" alt="{{ product.product_title }}" width="300">
                 </div>
             </div>
             <div class="col-lg-4">
