--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,11 @@
 		  </ul>
 		  <ul class="nav navbar-nav navbar-right">
 		  	<li><a href="#">ЗАКАЗЫ</a></li>
-			<li> <a href={% url 'my_cart' %}>Корзина  <span class="glyphicon glyphicon-shopping-cart"></span>  {{ request.session.cart_prods|default:0 }} ед.</a></li>
+			<li> <a href={% if request.session.cart_prods%}
+                            {% url 'my_cart' %}
+                         {% else %}
+                            "#"
+                         {% endif %}>Корзина  <span class="glyphicon glyphicon-shopping-cart"></span>  {{ request.session.cart_prods|default:0 }} ед.</a></li>
 			<li><a href="{% url 'dost_opl' %}">Оплата/доставка/гарантия</a></li>
 			<li><a href={% url 'about' %}>О магазине</a></li>
 		  </ul>
